syntax = "proto2";

package dataplane;

import "google/protobuf/duration.proto";

import "cloud/disk_manager/internal/pkg/dataplane/snapshot/config/config.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/config";

////////////////////////////////////////////////////////////////////////////////

message DataplaneConfig {
    required snapshot.SnapshotConfig SnapshotConfig = 1;

    optional uint32 ReaderCount = 2 [default = 10];
    optional uint32 WriterCount = 3 [default = 10];
    optional uint32 ChunksInflightLimit = 4 [default = 100];

    optional string SnapshotCollectionTimeout = 5 [default = "30m"];
    optional string CollectSnapshotsTaskScheduleInterval = 6 [default = "1m"];
    optional uint32 SnapshotCollectionInflightLimit = 7 [default = 10];

    optional bool UseGetChangedBlocks = 8;

    optional uint32 CreateSnapshotFromURLReaderCount = 9 [default = 5];
}
